--- a/eXtremal/resources/style/for_all.css
+++ b/eXtremal/resources/style/for_all.css
@@ -1,14 +1,21 @@
     /* editing default tags */
 
-body#content {
-    display: block;
-    border: 1px solid;
-}
-
 code {
     display: block;
     border-style: solid;
     border-width: 2px;
+}
+
+/* Table content structure */
+tr.content {
+    height: 80%;
+}
+table#container-content {
+    width: 100%;
+    height: 100%;
+}
+td#content-center {
+    width: 70%;
 }
 
     /* colors */
