--- a/eXtremal/resources/style/for_all.css
+++ b/eXtremal/resources/style/for_all.css
@@ -55,14 +55,21 @@ table#container-content {
     width: 100%;
     height: 100%;
 }
+td#hat {
+    vertical-align: top;
+}
 td#content-center {
     width: 70%;
-    max-width: 80%
+    max-width: 80%;
+    vertical-align: top;
 }
 td#content-right {
     min-width: 20%;
     max-width: 30%;
     vertical-align: top;
+}
+td#footer {
+    vertical-align: bottom;
 }
 
     /* colors */
